Some small fixes for transparent scrollbars in Breeze and HighContrast

--- a/terminatorlib/themes/Breeze/gtk-3.0/apps/terminator.css
+++ b/terminatorlib/themes/Breeze/gtk-3.0/apps/terminator.css
@@ -3,3 +3,10 @@
     margin: 0 0 0 0;
     padding: 0 0 0 0; }
 
+/* First attempt at fixing the scrollbars */
+.terminator-terminal-window .scrollbar .trough,
+.terminator-terminal-window .scrollbar .button {
+  background-color: @theme_bg_color;
+  border-radius: 0px
+}
+
